# pyo3-rustpython

./: .gitignore  .gitmodules  Cargo.toml  rust-toolchain.toml
crates/pyo3-rustpython/: Cargo.toml
crates/pyo3-rustpython-derive/: Cargo.toml
crates/pyo3-rustpython-derive/src/: lib.rs  pyclass.rs  pyfunction.rs  pymethods.rs  pymodule.rs
crates/pyo3-rustpython/src/: bound_object.rs  buffer.rs  conversion.rs  err.rs  exceptions.rs  instance.rs  lib.rs  pyclass.rs  python.rs  slots.rs  sync.rs
crates/pyo3-rustpython/src/ffi/: abstract_.rs  dictobject.rs  ffi_object.rs  floatobject.rs  listobject.rs  longobject.rs  mod.rs  modsupport.rs  objimpl.rs  pyerrors.rs  pyport.rs  tupleobject.rs  unicodeobject.rs
crates/pyo3-rustpython/src/types/: any.rs  bytes.rs  callable.rs  capsule.rs  datetime.rs  dict.rs  iterator.rs  list.rs  mapping.rs  mod.rs  module.rs  none.rs  primitives.rs  sequence.rs  set.rs  string.rs  tuple.rs  typeobj.rs
docs/: upstream-packages.md
docs/superpowers/plans/: 2026-04-02-pyo3-rustpython-backend.md  2026-04-10-progress.md  2026-04-11-recover-pymethods-and-resume-jsonschema.md  2026-04-11-upstream-clone-example-workflow.md  2026-04-12-pyo3-fork-frontend-backend-split.md  2026-04-12-rustpython-interpreter-thread-runtime.md  2026-04-14-pyo3-rustpython-port-completion.md
docs/superpowers/specs/: 2026-04-02-pyo3-rustpython-backend-design.md  2026-04-12-pyo3-frontend-backend-split-design.md  2026-04-12-rustpython-interpreter-thread-runtime-design.md  2026-04-15-pyo3-module-dispatch-backend-design.md
docs/upstream-issues/: rustpython-main-thread-re-import-recursion.md  rustpython-spawned-thread-import-recursion.md  rustpython-weakref-semantics.md
docs/upstream-prs/: jsonschema-rs.md  rpds-py.md
examples/blake3/: Cargo.toml
examples/blake3/src/: lib.rs  main.rs
examples/hello/: Cargo.toml
examples/hello/src/: lib.rs  main.rs
examples/jiter/: Cargo.toml
examples/jiter/src/: jiter_module.rs  main.rs  py_lossless_float.rs  py_string_cache.rs  python.rs
examples/jsonschema-dep/: Cargo.toml
examples/jsonschema-dep/src/: lib.rs  options.rs  retriever.rs
examples/jsonschema-referencing-dep/: Cargo.toml
examples/jsonschema-rs/: Cargo.toml
examples/jsonschema-rs/src/: canonical.rs  clone.rs  lib.rs  main.rs  ser.rs
examples/phase2-test/: Cargo.toml
examples/phase2-test/src/: lib.rs  main.rs
examples/point/: Cargo.toml
examples/point/src/: lib.rs  main.rs
examples/pyo3-tests/: Cargo.toml
examples/pyo3-tests/src/: lib.rs
examples/pyo3-tests/tests/: test_inheritance.rs
examples/rpds/: Cargo.toml
examples/rpds/src/: lib.rs  main.rs
pyo3-fork/: Cargo.toml
pyo3-fork/pyo3-macros-backend/: Cargo.toml
pyo3-fork/pyo3-macros-backend/src/: lib.rs  rustpython.rs
pyo3-fork/src/: impl_.rs
pyo3-fork/src/impl_/rustpython/: err.rs  gil.rs  instance.rs  marker.rs  mod.rs
