[package]
name = "jiter-pyo3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jiter-interp"
path = "src/main.rs"

[dependencies]
# Use pyo3-rustpython as `pyo3` — same as a real extension would.
pyo3 = { package = "pyo3-rustpython", path = "../../crates/pyo3-rustpython" }
jiter = { path = "../../jiter-vendor/crates/jiter", default-features = false, features = ["num-bigint"] }
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "d201c48e1", default-features = false, features = ["stdlib", "freeze-stdlib", "encodings"] }
rustpython-vm = { workspace = true }
smallvec = "1.11.0"
ahash = "0.8.0"
num-bigint = "0.4.4"
