[package]
name = "referencing"
version = "0.45.1"
edition = "2021"

[features]
default = []
retrieve-async = ["dep:async-trait", "dep:futures"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
async-trait = { version = "0.1.86", optional = true }
fluent-uri = { version = "0.4.1", features = ["serde"] }
futures = { version = "0.3.31", optional = true }
parking_lot = "0.12.3"
percent-encoding = "2.3.1"
serde_json = { version = "1" }
hashbrown = "0.16"
