[package]
name = "jsonschema-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "jsonschema_rs_harness"
path = "src/harness_stub.rs"

[dependencies]
jsonschema_rs = { package = "jsonschema-py", path = "../../third_party/jsonschema-rs/crates/jsonschema-py" }
pyo3 = { package = "pyo3-rustpython", path = "../../crates/pyo3-rustpython" }
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "d201c48e1", default-features = false, features = ["stdlib", "freeze-stdlib", "encodings"] }
rustpython-vm = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
