[package]
name = "phase2-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phase2-interp"
path = "src/main.rs"

[dependencies]
pyo3 = { package = "pyo3-rustpython", path = "../../crates/pyo3-rustpython" }
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "d201c48e1", default-features = false, features = ["stdlib", "freeze-stdlib", "encodings"] }
rustpython-vm = { workspace = true }
