[package]
name = "point-pyo3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "point-interp"
path = "src/main.rs"

[dependencies]
pyo3 = { package = "pyo3-rustpython", path = "../../crates/pyo3-rustpython" }
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "f9ca63893", default-features = false, features = ["stdlib", "freeze-stdlib", "encodings"] }
rustpython-vm = { workspace = true }
