[package]
name = "rpds-pyo3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpds-interp"
path = "src/main.rs"

[dependencies]
# Use pyo3-rustpython as `pyo3` — same as a real extension would.
pyo3 = { package = "pyo3-rustpython", path = "../../crates/pyo3-rustpython" }
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "f9ca63893", default-features = false, features = ["freeze-stdlib", "importlib", "encodings"] }
rustpython-vm = { workspace = true }

# rpds-py's own dependencies
rpds = "1.2.0"
archery = "1.2.2"
